# cog-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.cursor/rules/: engineering-standards.mdc  langchain-langgraph.mdc  project-core.mdc
.github/workflows/: ci.yml
rag_docs/: README.md
scripts/: ingest_oob.py  ingest_rag.py  ingest_spratly.py  ingest_weg.py  query_laydown.py  query_weg.py  run_cog_agent.py  verify_system.py
src/cog_analyst/: __init__.py  config.py
src/cog_analyst/cog/: __init__.py  graph.py  nodes.py  scenario.py  schemas.py  state.py
src/cog_analyst/db/: __init__.py  database.py  document_store.py  join_queries.py  oob_queries.py  oob_store.py  queries.py  rag_store.py  store.py  weg_queries.py
src/cog_analyst/domains/: __init__.py
src/cog_analyst/domains/spratly/: __init__.py  models.py  registry.py  source.py
src/cog_analyst/ingestion/: __init__.py  designator.py  entity_guard.py  extractor.py  interfaces.py  oob_markdown.py  pipeline.py  weg_pdf.py
src/cog_analyst/models/: __init__.py  extraction.py  schemas.py
src/cog_analyst/rag/: __init__.py  chunking.py  embedder.py
tests/: conftest.py  test_chunking.py  test_cog_nodes.py  test_database.py  test_designator.py  test_entity_guard.py  test_eval_dataset.py  test_join_queries.py  test_oob_markdown.py  test_oob_queries.py  test_oob_store.py  test_pipeline.py  test_rag_store.py  test_scenario.py  test_schemas.py  test_store.py  test_weg_pdf.py  test_weg_queries.py
tests/eval/: README.md  eval_rag_retrieval.py  queries.yaml
