[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cog-analyst"
version = "0.2.0"
description = "Grounded OSINT ingestion engine (LLM-as-untrusted-extractor -> Pydantic -> raw persist) with a deterministic WEG document store as ground truth, a hub-and-spoke SQLite store, and a pluggable Spratly Islands domain pack."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
llm = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]
pdf = [
    "pymupdf>=1.24",
]
dev = [
    "pytest>=8",
    "pymupdf>=1.24",
]

[project.scripts]
cog-ingest = "scripts.ingest_spratly:main"
cog-ingest-weg = "scripts.ingest_weg:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -v: show each test name + PASS/FAIL as they run.
# -ra: print a short summary of all non-passing outcomes at the end.
# For live function logging (e.g. guard blocks, inserts) run:
#   pytest --log-cli-level=INFO
addopts = "-v -ra"
log_cli_format = "%(levelname)-8s %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
