[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cog-analyst"
version = "0.2.0"
description = "Grounded OSINT ingestion engine (LLM-as-untrusted-extractor -> Pydantic -> raw persist) with a deterministic WEG document store as ground truth, a hub-and-spoke SQLite store, and a pluggable Spratly Islands domain pack."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
llm = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]
pdf = [
    "pymupdf>=1.24",
]
dev = [
    "pytest>=8",
    "pymupdf>=1.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
cog-ingest = "scripts.ingest_spratly:main"
cog-ingest-weg = "scripts.ingest_weg:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -v: show each test name + PASS/FAIL as they run.
# -ra: print a short summary of all non-passing outcomes at the end.
# For live function logging (e.g. guard blocks, inserts) run:
#   pytest --log-cli-level=INFO
addopts = "-v -ra"
log_cli_format = "%(levelname)-8s %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, B bugbear, BLE blind-except.
# pyupgrade (UP) is intentionally omitted: we target py39 and keep typing.Optional/
# List style (see engineering-standards.mdc), which UP would fight.
select = ["E", "W", "F", "I", "B", "BLE"]

[tool.mypy]
python_version = "3.9"
files = ["src", "scripts"]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
# Optional deps (langchain, fitz) are lazy-imported and ship no stubs.
ignore_missing_imports = true
